src/objects/SubBusinessLine__c.object
<CustomObject>
    <description>SFDC1-2170 : This holds Sub Business Line related to Products</description>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-2445 : Legacy ID field for Family Object</description>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKIDSubBusinessLine__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>SBL{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKIDSubBusinessLine</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SubBusinessLineCode__c</fullName>
        <description>SFDC1-2170 : This field will hold Sub Business Line Code</description>
        <label>Sub Business Line Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sub Business Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sub Business Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Business Lines</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>